updating the images path

--- a/index.html
+++ b/index.html
@@ -305,17 +305,12 @@
                         <div class="feed-shared-text">
                           <span class="t-14"
                             >Presenting you the Strategy and Planning team from
-                            BD.</span
+                            BD. </span
                           >
                         </div>
                       </div>
                       <div class="feed-shared-image">
-                        <img
-                          width="600"
-                          src="https://media-exp1.licdn.com/dms/image/C4E22AQG6937yAjtZ1g/feedshare-shrink_2048_1536/0/1637766536328?e=1640822400&amp;v=beta&amp;t=eorTHo6IhVuLriKYRYKpnt-G1R_1Hvhxo2EAyy7yv78"
-                          loading="lazy"
-                          height="750"
-                        />
+                        <img src="images/status-image.jpeg" >
                       </div>
                     </div>
 
@@ -324,15 +319,9 @@
                         <ul class="feed-social-ul">
                           <li class="social-reaction">
                             <button class="social-reaction-button">
-                              <img
-                                src="https://static-exp1.licdn.com/sc/h/8ekq8gho1ruaf8i7f86vd1ftt"
-                              />
-                              <img
-                                src="https://static-exp1.licdn.com/sc/h/cpho5fghnpme8epox8rdcds22"
-                              />
-                              <img
-                                src="https://static-exp1.licdn.com/sc/h/3wqhxqtk2l554o70ur3kessf1"
-                              />
+                              <object data="like-icon.svg"></object>
+                              <object data="heart-icon.svg" ></object>
+                              <object data="support-icon.svg" ></object>
                               <span class="social-reaction-button-span header">
                                 Kawshiqul Islam and 177 others
                               </span>
@@ -371,9 +360,7 @@
                   <div class="feed-post">
                     <div class="feed-share-post-header">
                       <div class="feed-user-image">
-                        <img
-                          src="https://media-exp1.licdn.com/dms/image/C560BAQG-dYfyWtn3QQ/company-logo_100_100/0/1624172507818?e=1646265600&amp;v=beta&amp;t=MMJtJUr00qqDcwBzVcTioCHKROGK8V5IKYLQdBoJ6xA"
-                        />
+                       <img src="images/shadhin-lab.jpeg">
                         <a href="">
                           <h4 class="t-14 t-bold t-black header">
                             Shadhin Lab LLC
@@ -426,9 +413,7 @@
                         </div>
                       </div>
                       <div class="feed-shared-image">
-                        <img
-                          src="https://media-exp1.licdn.com/dms/image/C5622AQFmm--grmhpYA/feedshare-shrink_800/0/1637488629831?e=1640822400&amp;v=beta&amp;t=tbUSjomtkxSh1Nz60ThD3Z3DuSCf3FMYuMCksBKNfY4"
-                        />
+                        <img src="images/shadhi-gift.jpeg" >
                       </div>
                     </div>
 
@@ -437,15 +422,9 @@
                         <ul class="feed-social-ul">
                           <li class="social-reaction">
                             <button class="social-reaction-button">
-                              <img
-                                src="https://static-exp1.licdn.com/sc/h/8ekq8gho1ruaf8i7f86vd1ftt"
-                              />
-                              <img
-                                src="https://static-exp1.licdn.com/sc/h/cpho5fghnpme8epox8rdcds22"
-                              />
-                              <img
-                                src="https://static-exp1.licdn.com/sc/h/3wqhxqtk2l554o70ur3kessf1"
-                              />
+                              <object data="like-icon.svg"></object>
+                              <object data="heart-icon.svg" ></object>
+                              <object data="support-icon.svg" ></object>
                               <span class="social-reaction-button-span header">
                                 Kawshiqul Islam and 177 others
                               </span>
@@ -519,12 +498,7 @@
                         </div>
                       </div>
                       <div class="feed-shared-image">
-                        <img
-                          width="600"
-                          src="https://media-exp1.licdn.com/dms/image/C4E22AQG6937yAjtZ1g/feedshare-shrink_2048_1536/0/1637766536328?e=1640822400&amp;v=beta&amp;t=eorTHo6IhVuLriKYRYKpnt-G1R_1Hvhxo2EAyy7yv78"
-                          loading="lazy"
-                          height="750"
-                        />
+                        <img src="images/status-image.jpeg" >
                       </div>
                     </div>
 
@@ -533,15 +507,9 @@
                         <ul class="feed-social-ul">
                           <li class="social-reaction">
                             <button class="social-reaction-button">
-                              <img
-                                src="https://static-exp1.licdn.com/sc/h/8ekq8gho1ruaf8i7f86vd1ftt"
-                              />
-                              <img
-                                src="https://static-exp1.licdn.com/sc/h/cpho5fghnpme8epox8rdcds22"
-                              />
-                              <img
-                                src="https://static-exp1.licdn.com/sc/h/3wqhxqtk2l554o70ur3kessf1"
-                              />
+                              <object data="like-icon.svg"></object>
+                              <object data="heart-icon.svg" ></object>
+                              <object data="support-icon.svg" ></object>
                               <span class="social-reaction-button-span header">
                                 Kawshiqul Islam and 177 others
                               </span>
@@ -628,12 +596,7 @@
                         </div>
                       </div>
                       <div class="feed-shared-image">
-                        <img
-                          width="600"
-                          src="https://media-exp1.licdn.com/dms/image/C4E22AQG6937yAjtZ1g/feedshare-shrink_2048_1536/0/1637766536328?e=1640822400&amp;v=beta&amp;t=eorTHo6IhVuLriKYRYKpnt-G1R_1Hvhxo2EAyy7yv78"
-                          loading="lazy"
-                          height="750"
-                        />
+                        <img src="images/status-image.jpeg" >
                       </div>
                     </div>
 
@@ -642,15 +605,9 @@
                         <ul class="feed-social-ul">
                           <li class="social-reaction">
                             <button class="social-reaction-button">
-                              <img
-                                src="https://static-exp1.licdn.com/sc/h/8ekq8gho1ruaf8i7f86vd1ftt"
-                              />
-                              <img
-                                src="https://static-exp1.licdn.com/sc/h/cpho5fghnpme8epox8rdcds22"
-                              />
-                              <img
-                                src="https://static-exp1.licdn.com/sc/h/3wqhxqtk2l554o70ur3kessf1"
-                              />
+                              <object data="like-icon.svg"></object>
+                              <object data="heart-icon.svg" ></object>
+                              <object data="support-icon.svg" ></object>
                               <span class="social-reaction-button-span header">
                                 Kawshiqul Islam and 177 others
                               </span>
